--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^14.0.0",
     "koa": "^3.0.1",
     "koa-bodyparser": "^4.4.1",
     "pg": "^8.16.3"
